--- a/index.html
+++ b/index.html
@@ -114,11 +114,14 @@
             </nav>
         </div>
     </header>
+    
     <main>
-        <div class="container-principal">
-            <div class="coluna1">parte 1</div>
-            <div class="coluna2">parte 2</div>
-            <div class="coluna3">parte 3</div>
+        <div class="container">
+            <div class="container-principal">
+                <div class="coluna1">parte 1</div>
+                <div class="coluna2">parte 2</div>
+                <div class="coluna3">parte 3</div>
+            </div>
         </div>
     </main>
 </body>
