--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
         <div class="container header-container">
             <div>
                 <a href="#" id="header-logo">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="#0a66c2"
-                    class="mercado-match" width="24" height="24" focusable="false">
-                    <path
-                        d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z">
-                    </path>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                        fill="#0a66c2" class="mercado-match" width="24" height="24" focusable="false">
+                        <path
+                            d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z">
+                        </path>
                     </svg>
                 </a>
 
                 <form>
-                    <input type="text" placeholder="Pesquisar" id="input-pesquisar"/>
+                    <input type="text" placeholder="Pesquisar" id="input-pesquisar" />
                     <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16" fill="currentColor" class="mercado-match" width="16" height="16" focusable="false">
-                            <path d="M14.56 12.44L11.3 9.18a5.51 5.51 0 10-2.12 2.12l3.26 3.26a1.5 1.5 0 102.12-2.12zM3 6.5A3.5 3.5 0 116.5 10 3.5 3.5 0 013 6.5z"></path>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16"
+                            fill="currentColor" class="mercado-match" width="16" height="16" focusable="false">
+                            <path
+                                d="M14.56 12.44L11.3 9.18a5.51 5.51 0 10-2.12 2.12l3.26 3.26a1.5 1.5 0 102.12-2.12zM3 6.5A3.5 3.5 0 116.5 10 3.5 3.5 0 013 6.5z">
+                            </path>
                         </svg>
                     </button>
                 </form>
@@ -33,56 +38,59 @@
             <nav>
                 <ul>
                     <li class="current">
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"
-                        class="mercado-match" width="24" height="24" focusable="false">
-                        <path d="M23 9v2h-2v7a3 3 0 01-3 3h-4v-6h-4v6H6a3 3 0 01-3-3v-7H1V9l11-7 5 3.18V2h3v5.09z"></path>
-                        </svg>
-                        Início
-                    </a></li>
-                    <li>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"
-                        class="mercado-match" width="24" height="24" focusable="false">
-                        <path
-                            d="M12 16v6H3v-6a3 3 0 013-3h3a3 3 0 013 3zm5.5-3A3.5 3.5 0 1014 9.5a3.5 3.5 0 003.5 3.5zm1 2h-2a2.5 2.5 0 00-2.5 2.5V22h7v-4.5a2.5 2.5 0 00-2.5-2.5zM7.5 2A4.5 4.5 0 1012 6.5 4.49 4.49 0 007.5 2z">
-                        </path>
-                        </svg>
-                        Minha Rede
-                    </a>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                <path
+                                    d="M23 9v2h-2v7a3 3 0 01-3 3h-4v-6h-4v6H6a3 3 0 01-3-3v-7H1V9l11-7 5 3.18V2h3v5.09z">
+                                </path>
+                            </svg>
+                            Início
+                        </a>
                     </li>
                     <li>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"
-                        class="mercado-match" width="24" height="24" focusable="false">
-                        <path
-                            d="M17 6V5a3 3 0 00-3-3h-4a3 3 0 00-3 3v1H2v4a3 3 0 003 3h14a3 3 0 003-3V6zM9 5a1 1 0 011-1h4a1 1 0 011 1v1H9zm10 9a4 4 0 003-1.38V17a3 3 0 01-3 3H5a3 3 0 01-3-3v-4.38A4 4 0 005 14z">
-                        </path>
-                        </svg>
-                        Vagas
-                    </a>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                <path
+                                    d="M12 16v6H3v-6a3 3 0 013-3h3a3 3 0 013 3zm5.5-3A3.5 3.5 0 1014 9.5a3.5 3.5 0 003.5 3.5zm1 2h-2a2.5 2.5 0 00-2.5 2.5V22h7v-4.5a2.5 2.5 0 00-2.5-2.5zM7.5 2A4.5 4.5 0 1012 6.5 4.49 4.49 0 007.5 2z">
+                                </path>
+                            </svg>
+                            Minha Rede
+                        </a>
                     </li>
                     <li>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"
-                        class="mercado-match" width="24" height="24" focusable="false">
-                        <path
-                            d="M16 4H8a7 7 0 000 14h4v4l8.16-5.39A6.78 6.78 0 0023 11a7 7 0 00-7-7zm-8 8.25A1.25 1.25 0 119.25 11 1.25 1.25 0 018 12.25zm4 0A1.25 1.25 0 1113.25 11 1.25 1.25 0 0112 12.25zm4 0A1.25 1.25 0 1117.25 11 1.25 1.25 0 0116 12.25z">
-                        </path>
-                        </svg>
-                        Mensagens
-                    </a>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                <path
+                                    d="M17 6V5a3 3 0 00-3-3h-4a3 3 0 00-3 3v1H2v4a3 3 0 003 3h14a3 3 0 003-3V6zM9 5a1 1 0 011-1h4a1 1 0 011 1v1H9zm10 9a4 4 0 003-1.38V17a3 3 0 01-3 3H5a3 3 0 01-3-3v-4.38A4 4 0 005 14z">
+                                </path>
+                            </svg>
+                            Vagas
+                        </a>
                     </li>
                     <li>
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"
-                        class="mercado-match" width="24" height="24" focusable="false">
-                        <path
-                            d="M22 19h-8.28a2 2 0 11-3.44 0H2v-1a4.52 4.52 0 011.17-2.83l1-1.17h15.7l1 1.17A4.42 4.42 0 0122 18zM18.21 7.44A6.27 6.27 0 0012 2a6.27 6.27 0 00-6.21 5.44L5 13h14z">
-                        </path>
-                        </svg>
-                        Notificações
-                    </a>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                <path
+                                    d="M16 4H8a7 7 0 000 14h4v4l8.16-5.39A6.78 6.78 0 0023 11a7 7 0 00-7-7zm-8 8.25A1.25 1.25 0 119.25 11 1.25 1.25 0 018 12.25zm4 0A1.25 1.25 0 1113.25 11 1.25 1.25 0 0112 12.25zm4 0A1.25 1.25 0 1117.25 11 1.25 1.25 0 0116 12.25z">
+                                </path>
+                            </svg>
+                            Mensagens
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                <path
+                                    d="M22 19h-8.28a2 2 0 11-3.44 0H2v-1a4.52 4.52 0 011.17-2.83l1-1.17h15.7l1 1.17A4.42 4.42 0 0122 18zM18.21 7.44A6.27 6.27 0 0012 2a6.27 6.27 0 00-6.21 5.44L5 13h14z">
+                                </path>
+                            </svg>
+                            Notificações
+                        </a>
                     </li>
                     <li id="header-menu_opcao-perfil">
                         <a href="#">
@@ -95,8 +103,11 @@
                     <li id="header-menu_opcao-negocios">
                         <a href="#">
                             <span id="header-icone_menu-negocios">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
-                                    <path d="M3 3h4v4H3zm7 4h4V3h-4zm7-4v4h4V3zM3 14h4v-4H3zm7 0h4v-4h-4zm7 0h4v-4h-4zM3 21h4v-4H3zm7 0h4v-4h-4zm7 0h4v-4h-4z"></path>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24"
+                                    fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                    <path
+                                        d="M3 3h4v4H3zm7 4h4V3h-4zm7-4v4h4V3zM3 14h4v-4H3zm7 0h4v-4h-4zm7 0h4v-4h-4zM3 21h4v-4H3zm7 0h4v-4h-4zm7 0h4v-4h-4z">
+                                    </path>
                                 </svg>
                             </span>
 
@@ -114,15 +125,76 @@
             </nav>
         </div>
     </header>
-    
+
     <main>
         <div class="container">
             <div class="container-principal">
-                <div class="coluna1">parte 1</div>
+                <div class="coluna1">
+                    <div class="bloco-1-coluna-1">
+                        <div class="imagem-fundo">
+                            <img src="img/bg-perfil.jpg" alt="">
+                        </div>
+                        <div class="conteudo-coluna-1">
+                            <a href="#" class="link-perfil">
+                                <div class="imagem-perfil">
+                                    <img src="img/fabi.jpeg" alt="">
+                                </div>
+                                <h2>Fabiana Sussuarana</h2>
+                            </a>
+                            <p>Aluno na UniNorte (Centro Universitário do Norte)</p>
+                        </div>
+                        <div class="segundo-conteudo-coluna-1">
+                            <div class="esquerda">
+                                <span class="span1">Conexões</span><br>
+                                <span class="span2">Amplie sua rede</span>
+                            </div>
+                            <div class="direita">
+                                <span>2</span>
+                            </div>
+                        </div>
+                        <div class="terceiro-conteudo-coluna-1">
+                            <a href="#">
+                                <p class="p1">Acesse ferramentas e estatísticas exclusivas</p>
+                                <div class="premium">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" class="mercado-match" width="18" height="18" focusable="false">
+                                        <path d="M20 20a3.36 3.36 0 001-2.39V6.38A3.38 3.38 0 0017.62 3H6.38A3.36 3.36 0 004 4z" fill="#f8c77e"></path>
+                                        <path d="M4 4a3.36 3.36 0 00-1 2.38v11.24A3.38 3.38 0 006.38 21h11.24A3.36 3.36 0 0020 20z" fill="#e7a33e"></path>
+                                    </svg>
+                                    <p>Experimente o Premium Grátis</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="quarto-conteudo-coluna-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="18" height="18" id="bookmark-fill-small" data-supported-dps="16x16" fill="currentColor">
+                                <path d="M13 4a3 3 0 00-3-3H3v14l5-4.5 5 4.5z"></path>
+                            </svg>
+                            <span>Meus itens</span>
+                        </div>
+                    </div>
+
+                    <div class="bloco-2-coluna-1">
+                        <div class="quinto-conteudo-coluna-1">
+                            <div>
+                                <a href="#">Grupos</a>
+                            </div>
+                            <div>
+                                <a href="#">Eventos</a>
+                            </div>
+                            <div>
+                                <a href="">Hashtags seguidas</a>
+                            </div>
+                        </div>
+                        <div class="descubra-mais">
+                            <a href="#">Descubra mais</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="coluna2">parte 2</div>
                 <div class="coluna3">parte 3</div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
