segunda coluna iniciada

--- a/index.html
+++ b/index.html
@@ -177,20 +177,70 @@
                             <div>
                                 <a href="#">Grupos</a>
                             </div>
-                            <div>
-                                <a href="#">Eventos</a>
+                            <div id="eventos">
+                                <a href="#">
+                                    <span>Eventos</span> 
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16" fill="currentColor" class="mercado-match" width="16" height="16" focusable="false">
+                                        <path d="M14 9H9v5H7V9H2V7h5V2h2v5h5z"></path>
+                                    </svg>
+                                </a>
                             </div>
                             <div>
                                 <a href="">Hashtags seguidas</a>
                             </div>
                         </div>
                         <div class="descubra-mais">
-                            <a href="#">Descubra mais</a>
+                            <a href="#">Descubra mais </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="coluna2">parte 2</div>
+                <div class="coluna2">
+                    <div class="pesquisar">
+                        <div class="imagem-perfil">
+                            <img src="img/fabi.jpeg" alt="">
+                        </div>
+
+                        <input type="text" id="pesquisar-input" placeholder="Começar Publicações">
+                    </div>
+
+                    <nav class="menu-filtros">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                        <path d="M19 4H5a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3zm1 13a1 1 0 01-.29.71L16 14l-2 2-6-6-4 4V7a1 1 0 011-1h14a1 1 0 011 1zm-2-7a2 2 0 11-2-2 2 2 0 012 2z"></path>
+                                    </svg>
+
+                                    <span>Foto</span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor" class="mercado-match" width="24" height="24" focusable="false">
+                                        <path d="M19 4H5a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3zm-9 12V8l6 4z"></path>
+                                    </svg>
+                                    
+                                    <span>Foto</span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    Foto
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    Foto
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="coluna3">parte 3</div>
             </div>
         </div>
